# unitree_actuator_open_sdk

./: CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
example/: example_a1_motor_output.cpp  example_go2_motor_output.cpp  example_goM8010_6_motor_output.cpp  gochangeid.cpp
include/serialPort/: SerialPort.h
include/unitreeMotor/: unitreeMotor.h
include/unitreeMotor/include/: crc_ccitt.h
python/: pyproject.toml
python/examples/: example_a1_motor.py  example_b1_motor.py  example_go2_motor.py  example_goM8010_6_motor.py
python/lib/unitree_actuator_open_sdk/: __init__.py
src/: SerialPort.cpp  bindings.cpp  unitreeMotor.cpp
